Se terminan las secciones precios y beneficios

--- a/index.html
+++ b/index.html
@@ -91,7 +91,41 @@
         </div>
 
     </section>
-
+    <section class="promos container">
+        <h2 class="subtitulo">Promociones en Responsavilidad Civil</h2>
+        <div class="promos__tabla">
+            <div class="promos__elemento">
+                <p class="promos__name">Moto</p>
+                <h3 class="promos__precio">$420/mes</h3>
+                <div class="promos__caract">
+                    <p class="promos__item">Gruas 1.000km</p>
+                    <p class="promos__item">Asistencia 24hs</p>
+                    <p class="promos__item">Plan de Salud</p>
+                </div>
+                <a href="#" class="promos__btn">COMPRAR</a>
+            </div>
+            <div class="promos__elemento promos__elemento--best">
+                <p class="promos__name">Autos</p>
+                <h3 class="promos__precio">$1990/mes</h3>
+                <div class="promos__caract">
+                    <p class="promos__item">Gruas 1.000km</p>
+                    <p class="promos__item">Asistencia 24hs</p>
+                    <p class="promos__item">Plan de Salud</p>
+                </div>
+                <a href="#" class="promos__btn">COMPRAR</a>
+            </div>
+            <div class="promos__elemento">
+                <p class="promos__name">Taxis y Remis</p>
+                <h3 class="promos__precio">$2990/mes</h3>
+                <div class="promos__caract">
+                    <p class="promos__item">Gruas 1.000km</p>
+                    <p class="promos__item">Asistencia 24hs</p>
+                    <p class="promos__item">Plan de Salud</p>
+                </div>
+                <a href="#" class="promos__btn">COMPRAR</a>
+            </div>
+        </div>
+    </section>
 
 
 
