se termino slide de compania, se empieza preguntas frecuentes

--- a/index.html
+++ b/index.html
@@ -41,92 +41,113 @@
     </header>
     <main>
 
-    <section class="container beneficios">
-        <h2 class="subtitulo">Conoce los beneficios por contratar tu poliza 
-            Online</h2>
-        <p class="beneficios__p">
-            Contratando el seguro de tu vehiculo te bonificamos
-        </p>
-        <div class="beneficios__menu">
-            <article class="beneficios__iconos">
-                <img src="./img/descuento.svg" class="beneficios__icono" alt="">
-                <h3 class="beneficio__titulo">20% de Descuento</h3>
-                <p class="beneficio__p">
-                Bonificacion sobre tu su seguro actual, todas las coberturas.
-                </p>
-            </article>
+        <section class="container beneficios">
+            <h2 class="subtitulo">Conoce los beneficios por contratar tu poliza
+                Online</h2>
+            <p class="beneficios__p">
+                Contratando el seguro de tu vehiculo te bonificamos
+            </p>
+            <div class="beneficios__menu">
+                <article class="beneficios__iconos">
+                    <img src="./img/descuento.svg" class="beneficios__icono" alt="">
+                    <h3 class="beneficio__titulo">20% de Descuento</h3>
+                    <p class="beneficio__p">
+                        Bonificacion sobre tu su seguro actual, todas las coberturas.
+                    </p>
+                </article>
 
-            <article class="beneficios__iconos">
-                <img src="./img/salud.svg" class="beneficios__icono" alt="">
-                <h3 class="beneficio__titulo">Hogar Protegido</h3>
-                <p class="beneficio__p">
-                Asistencia al hogar las 24hs. / Plan de salud para el titular y su familia.
-                </p>
-            </article>
+                <article class="beneficios__iconos">
+                    <img src="./img/salud.svg" class="beneficios__icono" alt="">
+                    <h3 class="beneficio__titulo">Hogar Protegido</h3>
+                    <p class="beneficio__p">
+                        Asistencia al hogar las 24hs. / Plan de salud para el titular y su familia.
+                    </p>
+                </article>
 
-            <article class="beneficios__iconos">
-                <img src="./img/vehiculo.svg" class="beneficios__icono" alt="">
-                <h3 class="beneficio__titulo">Vehículo Protegido</h3>
-                <p class="beneficio__p">
-                    Servicio de grúas hasta 1000km. / Cobertura médica en tu vehículo.
-                </p>
-            </article>
-        </div>
-
-
-    </section>
-    <section class="asesorar">
-        <div class="asesorar__container container">
-            <div class="asesorar__texto">
-                <h2 class="subtitulo">No dudes en consultar por un asesoramiento personalizado. ¡Contáctanos!</h2>
-                <p class="asesorar__p">
-                    Nos especializamos en seleccionar el mejor seguro para cubrir tus riesgos, asi sea para tus bienes y patrimonio, como para tu vida y familia. Vamos a brindarte una solución a tu medida para satisfacer tus distintas necesidades.
-                </p>
-                <a href="#" class="btn">¡Quiero asesoramiento!</a>
+                <article class="beneficios__iconos">
+                    <img src="./img/vehiculo.svg" class="beneficios__icono" alt="">
+                    <h3 class="beneficio__titulo">Vehículo Protegido</h3>
+                    <p class="beneficio__p">
+                        Servicio de grúas hasta 1000km. / Cobertura médica en tu vehículo.
+                    </p>
+                </article>
             </div>
 
-            <figure class="asesorar__imagen">
-                <img src="./img/interview.png" alt="asesoramiento imagen" class="asesorar__img">
-            </figure>
-        </div>
 
-    </section>
-    <section class="promos container">
-        <h2 class="subtitulo">Promociones en Responsavilidad Civil</h2>
-        <div class="promos__tabla">
-            <div class="promos__elemento">
-                <p class="promos__name">Moto</p>
-                <h3 class="promos__precio">$420/mes</h3>
-                <div class="promos__caract">
-                    <p class="promos__item">Gruas 1.000km</p>
-                    <p class="promos__item">Asistencia 24hs</p>
-                    <p class="promos__item">Plan de Salud</p>
+        </section>
+        <section class="asesorar">
+            <div class="asesorar__container container">
+                <div class="asesorar__texto">
+                    <h2 class="subtitulo">No dudes en consultar por un asesoramiento personalizado. ¡Contáctanos!</h2>
+                    <p class="asesorar__p">
+                        Nos especializamos en seleccionar el mejor seguro para cubrir tus riesgos, asi sea para tus
+                        bienes y patrimonio, como para tu vida y familia. Vamos a brindarte una solución a tu medida
+                        para satisfacer tus distintas necesidades.
+                    </p>
+                    <a href="#" class="btn">¡Quiero asesoramiento!</a>
                 </div>
-                <a href="#" class="promos__btn">COMPRAR</a>
-            </div>
-            <div class="promos__elemento promos__elemento--best">
-                <p class="promos__name">Autos</p>
-                <h3 class="promos__precio">$1990/mes</h3>
-                <div class="promos__caract">
-                    <p class="promos__item">Gruas 1.000km</p>
-                    <p class="promos__item">Asistencia 24hs</p>
-                    <p class="promos__item">Plan de Salud</p>
-                </div>
-                <a href="#" class="promos__btn">COMPRAR</a>
-            </div>
-            <div class="promos__elemento">
-                <p class="promos__name">Taxis y Remis</p>
-                <h3 class="promos__precio">$2990/mes</h3>
-                <div class="promos__caract">
-                    <p class="promos__item">Gruas 1.000km</p>
-                    <p class="promos__item">Asistencia 24hs</p>
-                    <p class="promos__item">Plan de Salud</p>
-                </div>
-                <a href="#" class="promos__btn">COMPRAR</a>
-            </div>
-        </div>
-    </section>
 
+                <figure class="asesorar__imagen">
+                    <img src="./img/interview.png" alt="asesoramiento imagen" class="asesorar__img">
+                </figure>
+            </div>
+
+        </section>
+        <section class="promos container">
+            <h2 class="subtitulo">Promociones en Responsavilidad Civil</h2>
+            <div class="promos__tabla">
+                <div class="promos__elemento">
+                    <p class="promos__name">Moto</p>
+                    <h3 class="promos__precio">$420/mes</h3>
+                    <div class="promos__caract">
+                        <p class="promos__item">Gruas 1.000km</p>
+                        <p class="promos__item">Asistencia 24hs</p>
+                        <p class="promos__item">Plan de Salud</p>
+                    </div>
+                    <a href="#" class="promos__btn">COMPRAR</a>
+                </div>
+                <div class="promos__elemento promos__elemento--best">
+                    <p class="promos__name">Autos</p>
+                    <h3 class="promos__precio">$1990/mes</h3>
+                    <div class="promos__caract">
+                        <p class="promos__item">Gruas 1.000km</p>
+                        <p class="promos__item">Asistencia 24hs</p>
+                        <p class="promos__item">Plan de Salud</p>
+                    </div>
+                    <a href="#" class="promos__btn">COMPRAR</a>
+                </div>
+                <div class="promos__elemento">
+                    <p class="promos__name">Taxis y Remis</p>
+                    <h3 class="promos__precio">$2990/mes</h3>
+                    <div class="promos__caract">
+                        <p class="promos__item">Gruas 1.000km</p>
+                        <p class="promos__item">Asistencia 24hs</p>
+                        <p class="promos__item">Plan de Salud</p>
+                    </div>
+                    <a href="#" class="promos__btn">COMPRAR</a>
+                </div>
+            </div>
+        </section>
+        <section class="companias">
+            <div class="companias__container container">
+                <div class="companias__body">
+                    <div class="companias__texto">
+                        <h2 class="subtitulo">Organizacion Centro SRL, <span class="companias__info">Productor asesores de seguros</span></h2>
+                        <p class="companias__detalle">
+                            Unica empresa Mayorista de Servicios premium y seguros exclusivos que brinda la mas alta
+                            calidad de prestacion, al merjo precio.
+                        </p>
+                    </div>
+                    <figure class="companias__imagen">
+                        <img src="/img/logo.png" class="compania__img" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section class="preguntas container">
+            <h2 class="subtitulo">Preguntas Frecuentes</h2>
+
+        </section>
 
 
 
@@ -157,7 +178,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-    <script src="./js/script.js"></script>
+    <script src="./js/slider.js"></script>
 </body>
 
 </html>
