--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multicotizador</title>
     <link rel="icon" href="./img/icono.ico">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
 </head>
 
@@ -94,7 +92,7 @@
 
         </section>
         <section class="promos container">
-            <h2 class="subtitulo">Promociones en Responsavilidad Civil</h2>
+            <h2 class="subtitulo">Promociones en Responsabilidad Civil</h2>
             <div class="promos__tabla">
                 <div class="promos__elemento">
                     <p class="promos__name">Moto</p>
@@ -146,7 +144,22 @@
         </section>
         <section class="preguntas container">
             <h2 class="subtitulo">Preguntas Frecuentes</h2>
+            <p class="preguntas__p">
+                Para obtener una respuesta inmediata, podés entrar a las siguientes preguntas frecuentes, donde encontrarás información sobre las cuestiones más consultadas:
+            </p>
+            <section class="preguntas__container">
+                <article class="preguntas__body">
+                    <div class="preguntas__respuesta">
+                        <h3 class="preguntas__titulo">
+                            ¿Como abono la cuota?
+                        </h3>
+                    </div>
+                </article>
+            </section>
 
+            <section class="preguntas__container">
+                
+            </section>
         </section>
 
 
@@ -175,8 +188,6 @@
 
 
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
     <script src="./js/slider.js"></script>
 </body>
