se termina de agregar diseño y se agrega lo visto en js

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
         </div>
     </header>
     <main>
-
         <section class="container beneficios">
             <h2 class="subtitulo">Conoce los beneficios por contratar tu poliza
                 Online</h2>
@@ -130,10 +129,11 @@
             <div class="companias__container container">
                 <div class="companias__body">
                     <div class="companias__texto">
-                        <h2 class="subtitulo">Organizacion Centro SRL, <span class="companias__info">Productor asesores de seguros</span></h2>
+                        <h2 class="subtitulo">Organizacion Centro SRL, <span class="companias__info">Productor asesores
+                                de seguros</span></h2>
                         <p class="companias__detalle">
                             Unica empresa Mayorista de Servicios premium y seguros exclusivos que brinda la mas alta
-                            calidad de prestacion, al merjo precio.
+                            calidad de prestacion, al mejor precio.
                         </p>
                     </div>
                     <figure class="companias__imagen">
@@ -145,51 +145,72 @@
         <section class="preguntas container">
             <h2 class="subtitulo">Preguntas Frecuentes</h2>
             <p class="preguntas__p">
-                Para obtener una respuesta inmediata, podés entrar a las siguientes preguntas frecuentes, donde encontrarás información sobre las cuestiones más consultadas:
+                Para obtener una respuesta inmediata, podés entrar a las siguientes preguntas frecuentes, donde
+                encontrarás información sobre las cuestiones más consultadas:
             </p>
             <section class="preguntas__container">
                 <article class="preguntas__body">
                     <div class="preguntas__respuesta">
                         <h3 class="preguntas__titulo">
                             ¿Como abono la cuota?
+                            <span class="preguntas__flecha">
+                                <img src="./img/flechaAbajo.svg" class="preguntas__img" alt="">
+                            </span>
                         </h3>
+                        <p class="preguntas__resp">
+                            Eleji la forma de pago que prefieras, cuentas con servicio de cobrador a domicilio sin
+                            conto, o
+                            puedes dejarnos tus datos y nos contactaremos para enviarte un boton de pago para un menor
+                            costo.
+                            Link de pago || Transferencia || Pagos en oficina
+                        </p>
+                    </div>
+                </article>
+                <article class="preguntas__body">
+                    <div class="preguntas__respuesta">
+                        <h3 class="preguntas__titulo">
+                            ¿Que documentacion necesito para circular?
+                            <span class="preguntas__flecha">
+                                <img src="./img/flechaAbajo.svg" class="preguntas__img" alt="">
+                            </span>
+                        </h3>
+                        <p class="preguntas__resp">
+                            Documento Nacional de Identidad.<br> Licencia Nacional de Conducir.<br>
+                            Cédula Verde o Azul (si no sos el titular del vehículo). <br>
+                            Verificación Técnica Vehicular o Revisión Técnica Obligatoria vigente.<br> Comprobante de la
+                            póliza de seguro
+                        </p>
+                    </div>
+                </article>
+                <article class="preguntas__body">
+                    <div class="preguntas__respuesta">
+                        <h3 class="preguntas__titulo">
+                            ¿Que hago en caso de un siniestro?
+                            <span class="preguntas__flecha">
+                                <img src="./img/flechaAbajo.svg" class="preguntas__img" alt="">
+                            </span>
+                        </h3>
+                        <p class="preguntas__resp">
+                            Intercambiá información con los conductores de los vehículos involucrados en el siniestro.
+                            Es importante tener en cuenta que si se trata de un choque en cadena, deberás pedirle los
+                            datos a todos los involucrados, no solo con el que tuviste el choque directo. Solicitá
+                            nombre y apellido, número de DNI, dirección y número de teléfono.<br><br> Además, anotá la
+                            patente del vehículo o los vehículos involucrados, el nombre de la compañía de seguros y el
+                            número y fecha de vencimiento de la póliza.Registrá también las condiciones de manejo y la
+                            ubicación en la que ocurrió, el tipo de daño causado en ambos vehículos, la marca, el modelo
+                            y el año de los vehículos. Si es posible hacerlo, sacá fotos de los daños.
+                        </p>
                     </div>
                 </article>
             </section>
-
-            <section class="preguntas__container">
-                
+            <section class="preguntas__nuevas">
+                <h2 class="subtitulo">¿Tienes alguna duda sobre nuestros servicios?</h2>
+                <p class="preguntas__texto">Estamos a disposición para despejar todas las dudas que puedas tener, vamos
+                    a brindarte una solución a tu medida para satisfacer tus distintas necesidades.</p>
+                <a href="" class="btn">Contacto</a>
             </section>
         </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     </main>
-    </script>
-    <script src="./js/slider.js"></script>
 </body>
-
+<script src="./js/bienvenida.js"></script>
 </html>
