Se elimina lo anteriormente implementado y se empieza a interactuar con el HTML

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h2 class="nav__title">Multicotizador</h2>
+                <h2 class="nav__title" id="prueba">Multicotizador</h2>
             </div>
             <ul>
                 <li><a href=""></a>Inicio</li>
@@ -210,7 +210,25 @@
                 <a href="" class="btn">Contacto</a>
             </section>
         </section>
+        <section class="articulos">
+            <div class="articulos__container container">
+                <h2 class="subtitulo">Articulos necesarios para circular</h2>
+                <div class="kitAuto" id="kits">
+                    <h2 class="">Kit Reglamentarios</h2>
+                    <div class="container__kits">
+
+                    </div>
+                </div>
+                <div class="fuego">
+                    <h2 class="">Matafuegos</h2>
+                    <div class="container__fuego">
+
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 <script src="./js/bienvenida.js"></script>
+
 </html>
