--- a/index.html
+++ b/index.html
@@ -21,12 +21,19 @@
                 <li><a href=""></a>Inicio</li>
                 <li><a href=""></a>Acerca de</li>
                 <li><a href=""></a>Contacto</li>
-                <li><a href=""></a>Clientes</li>
-
+                <li id="compras__btn"><img src="./img/carritto.svg" class="beneficios__icono" alt=""></li>
                 <img class="nav__cerrar" src="./img/cerrar.svg" alt="cierre menu">
             </ul>
             <div class="nav__menu">
                 <img src="./img/ham.svg" alt="menu hamburguesa" class="nav__img">
+            </div>
+            <div class="modal__container">
+                <div class="modal modal-close">
+                    <p class="close">X</p>
+                    <div class="carrito">
+                        
+                    </div>
+                </div>
             </div>
         </nav>
         <div class="hero__container container">
@@ -226,6 +233,16 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="carrito">
+            <div class="carrito__container container">
+                <h2 class="carrito__titulo">Lista</h2>
+                <div class="carrito_compras_container">
+                    <ul class="lista__carrito"></ul>
+                </div>
+            </div>
+
+
         </section>
     </main>
 </body>
